# project_whill

./: .gitignore  .gitmodules  CHANGES_ANALYSIS_2025_08_08.md  LICENSE  README.md  dockerfile.image_whill  project_launch.sh  project_launch_exp.sh  project_launch_sim.sh  setup  setup_exp  setup_sim  whill.rules  whill_exp.rules
1_launcher/: launch_rtk_gnss.sh  launch_velodyne.sh  launch_whill.sh  launch_whill2.sh  launch_whill_exp.sh  launch_whill_ros2.sh  launch_whill_sim.sh
1_launcher/launch_rtk_gnss/: run_rtklib.sh
2_ros_packages/wheelchair/connection_wheelchair/: CMakeLists.txt  package.xml
2_ros_packages/wheelchair/connection_wheelchair/launch/: connection_wheelchair.launch.py
2_ros_packages/wheelchair/connection_wheelchair/src/: connection_node.cpp
2_ros_packages/wheelchair/electric_wheelchair/: CMakeLists.txt  my_robo.urdf  package.xml
2_ros_packages/wheelchair/electric_wheelchair/config/: controller.yaml  obs_controller.yaml
2_ros_packages/wheelchair/electric_wheelchair/launch/: control.launch.py  gazebo.launch.py  obs_control.launch.py
2_ros_packages/wheelchair/electric_wheelchair/models/electric_wheelchair/: model.config  model.sdf
2_ros_packages/wheelchair/electric_wheelchair/src/: electric_wheelchair.cpp
2_ros_packages/wheelchair/electric_wheelchair/xacro/: static.urdf.xacro  wheelchair_2.xacro
2_ros_packages/whill_driver/: README.md  setup.cfg
3_dockerfiles/: dockerfile.rtk_gnss  dockerfile.sfm  dockerfile.velodyne  dockerfile.whillRos2
3_dockerfiles_exp/: dockerfile.rtk_gnss  dockerfile.velodyne  dockerfile.whillRos2  dockerfile.whill_exp
3_dockerfiles_sim/: dockerfile.sfm  dockerfile.velodyne  dockerfile.whill_sim
wheelchair_experiment/: .bmad  .gitignore  ARCHITECTURE_REFACTOR_PROPOSAL.md  AStar_Utils.m  BIM_SCRIPT_EXPLAINED.md  CLAUDE.md  EvaluationPath_vec_gpu_Documentation.md  LiDAR_Object_Estimation_TODO.md  NEXT_SESSION_INSTRUCTIONS.txt  PathSetting_AStar.m  PathSetting_original.m  README.md  README_ja.md  TODO.md  WAYPOINT_FLOW_DIAGRAM.md  WAYPOINT_TRACKING_ARCHITECTURE.md  controlElevatorDoor.asv  controlElevatorDoor.m  convert_mermaid_to_pdf.sh  convert_to_pdf.sh  create_html_with_mermaid.py  debugElevatorDoorDetection.m  debug_map.m  detectElevatorDoorState.m  enterElevator.m  enterElevatorNew.m  examine_map2.m  gen_vehicle_points.asv  gen_vehicle_points.m  generate_fillet.m  interactiveWaypointSelection.m  main.m  main_astar.m  md_to_pdf_with_mermaid.py  read.m  sliding_door.xacro  test.asv  test.m  testDoor.m  test_obstacle_cost_astar.m  (+1 more)
wheelchair_experiment/.claude/: BMAD_INTEGRATION.md
wheelchair_experiment/Floodfill/: FloodFillROI.m  README.md  debugFloodFill.m  testFloodFillROI.m  testRoomPainting.m  testRoomPaintingImproved.m  visualizeFloodFillComparison.m  visualizeFloodFillSteps.m
wheelchair_experiment/MultiRoomNav/: DIJKSTRA_ALGORITHM_WALKTHROUGH.md  DOOR_TO_DOOR_DISTANCES.md  DoorConnection.m  HYBRID_PLANNER_README.md  HybridPathPlanner.m  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RoomDatabase.m  RoomGraph.m  RoomGraphWithDoorDistances.m  RoomNode.m  (+16 more)
(+1763 files in other folders)
